--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
-copypasta = "0.10.1"
+clipboard-win = "5.3.0"
 encoding_rs = "0.8.33"
 encoding_rs_io = "0.1.7"
