--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ chrono = "0.4.38"
 clipboard-win = "5.3.0"
 encoding_rs = "0.8.33"
 encoding_rs_io = "0.1.7"
+once_cell = "1.19.0"
 rand = "0.8.5"
 regex = "1.10.4"
