--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
+alphanumeric-sort = { version = "1.5.3", default-features = false }
 chrono = "0.4.38"
 clipboard-win = "5.3.0"
 encoding_rs = "0.8.33"
